--- a/dsl/pom.xml
+++ b/dsl/pom.xml
@@ -13,7 +13,7 @@
     <parent>
         <artifactId>powsybl-core</artifactId>
         <groupId>com.powsybl</groupId>
-        <version>6.2.1</version>
+        <version>6.2.2-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
