--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,7 @@
     </parent>
 
     <artifactId>powsybl-core</artifactId>
-    <version>6.2.1</version>
+    <version>6.2.2-SNAPSHOT</version>
     <packaging>pom</packaging>
 
     <name>powsybl</name>
