--- a/time-series/time-series-dsl/pom.xml
+++ b/time-series/time-series-dsl/pom.xml
@@ -75,6 +75,11 @@
             <artifactId>powsybl-config-test</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>powsybl-computation</artifactId>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
 </project>
