--- a/pom.xml
+++ b/pom.xml
@@ -97,6 +97,7 @@
 
         <assertj.version>3.24.2</assertj.version>
         <autoservice.version>1.1.1</autoservice.version>
+        <awaitility.version>4.2.0</awaitility.version>
         <commonscli.version>1.5.0</commonscli.version>
         <commonscompress.version>1.26.0</commonscompress.version>
         <commons-configuration2.version>2.9.0</commons-configuration2.version>
@@ -886,6 +887,12 @@
                 <groupId>com.google.guava</groupId>
                 <artifactId>guava-testlib</artifactId>
                 <version>${guava.version}</version>
+                <scope>test</scope>
+            </dependency>
+            <dependency>
+                <groupId>org.awaitility</groupId>
+                <artifactId>awaitility</artifactId>
+                <version>${awaitility.version}</version>
                 <scope>test</scope>
             </dependency>
             <dependency>
