--- a/action/action-simulator/pom.xml
+++ b/action/action-simulator/pom.xml
@@ -15,7 +15,7 @@
     <parent>
         <groupId>com.powsybl</groupId>
         <artifactId>powsybl-action</artifactId>
-        <version>6.2.3-SNAPSHOT</version>
+        <version>6.2.3</version>
     </parent>
 
     <artifactId>powsybl-action-simulator</artifactId>
