--- a/iidm/iidm-scripting/pom.xml
+++ b/iidm/iidm-scripting/pom.xml
@@ -15,7 +15,7 @@
     <parent>
         <artifactId>powsybl-iidm</artifactId>
         <groupId>com.powsybl</groupId>
-        <version>6.2.3-SNAPSHOT</version>
+        <version>6.2.3</version>
     </parent>
 
     <artifactId>powsybl-iidm-scripting</artifactId>
