--- a/scripting-test/pom.xml
+++ b/scripting-test/pom.xml
@@ -15,7 +15,7 @@
     <parent>
         <artifactId>powsybl-core</artifactId>
         <groupId>com.powsybl</groupId>
-        <version>6.2.3-SNAPSHOT</version>
+        <version>6.2.3</version>
     </parent>
 
     <artifactId>powsybl-scripting-test</artifactId>
